--- a/EasyUIDemo.MVC/EasyUIDemo.MVC.csproj
+++ b/EasyUIDemo.MVC/EasyUIDemo.MVC.csproj
@@ -115,6 +115,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CarController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
